# tonic_example_broken_project

./: README.md
.devcontainer/: devcontainer.json  setup.sh
broken/: Cargo.toml  build.rs
broken/src/: lib.rs  my_proto.proto
fixed/: Cargo.toml
