[package]
name = "tonic_example_broken_project"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
prost = '0.13.1'
tonic = { git = "https://github.com/LockedThread/tonic", branch = "fix/std-naming-collision", version = "0.12.0" }

[build-dependencies]
prost-build = '0.13.1'
tonic-build = { git = "https://github.com/LockedThread/tonic", branch = "fix/std-naming-collision", version = "0.12.0" }

